--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/prices.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/prices.html.twig
@@ -16,195 +16,27 @@
             <header class="heading">
                 <em class="notify">These acts are visible on your profile</em>
             </header>
-            <article class="act private">
-                <h2 class="title">
-                    <span>Act1 - Jazz Band
-                        <i class="fa fa-trash" aria-hidden="true"></i>
-                    </span>
-                </h2>
-                <ul class="info-list">
-                    <li>
-                        <div class="col">
-                            <div class="row">
-                                <input class="input-num long" type="text" placeholder="Package name">
-                            </div>
-                        </div>
-                        <div class="col">
-                            <ul class="price-list">
-                                <li>
-                                    <div class="box">
-                                        <dl>
-                                            <dt>
-                                                <select data-class="selections-white curr-select" class="short" name="curr_type">
-                                                    <option value="0">1</option>
-                                                    <option value="1" selected>2</option>
-                                                    <option value="2">3</option>
-                                                </select>
-                                                <span class="note-x">x</span>
-                                            </dt>
-                                            <dd>
-                                                <select data-class="selections-white curr-select" name="curr_type">
-                                                    <option value="0">45 min</option>
-                                                    <option value="1">50 min</option>
-                                                    <option value="2">55 min</option>
-                                                </select>
-                                            </dd>
-                                            <i class="fa fa-trash" aria-hidden="true"></i>
-                                        </dl>
-                                    </div>
-                                    <div class="add">
-                                        <a href="#">Add sets</a><a class="ico-box" href="#"><i class="ico question">?</i></a>
-                                    </div>
-                                </li>
-                                <!--<li>-->
-                                <!--<div class="ico-holder">-->
-                                <!--<a class="ico-box" href="#"><i class="ico edit"></i></a>-->
-                                <!--<a class="ico-box" href="#"><i class="ico delete"></i></a>-->
-                                <!--</div>-->
-                                <!--</li>-->
-                            </ul>
-                        </div>
-                        <div class="col-2">
-                            <ul class="price-list">
-                                <li>
-                                    <div class="box">
-                                        <dl>
-                                            <dt>Price1:</dt>
-                                            <dd>
-                                                <input class="input-num" type="text" placeholder="3.000">
-                                                <span class="curr">GBP</span>
-                                            </dd>
-                                            <i class="fa fa-trash" aria-hidden="true"></i>
-                                        </dl>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="add">
-                                        <a href="#">Add price</a><a class="ico-box" href="#"><i class="ico question">?</i></a>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </li>
-                </ul>
-                <div class="button-gradient add-btn">
-                    <button add-package-btn type="button" class="btn register">Add Package</button>
-                </div>
-            </article>
+
+            <div perf-created-sec></div>
+
+            {#<div class="button-gradient add-btn">#}
+                {#<button package-add type="button" class="btn register">Add Package</button>#}
+            {#</div>#}
         </section>
+
         <section class="act-section blue">
             <header class="heading">
                 <em class="notify">These acts will be private and invisible on your profile</em>
             </header>
-            <article class="act private">
-                <h2 class="title">
-                    <!--<span>Act1 - Jazz Band</span>-->
-                    <input class="input-num huge" type="text" placeholder="Act title">
-                </h2>
-                <ul class="info-list">
-                    <li>
-                        <div class="col">
-                            <div class="row">
-                                <input class="input-num long" type="text" placeholder="Package name">
-                            </div>
-                        </div>
-                        <div class="col">
-                            <ul class="price-list">
-                                <li>
-                                    <div class="box">
-                                        <dl>
-                                            <dt>
-                                                <select data-class="selections-white curr-select" class="short" name="curr_type">
-                                                    <option value="0">1</option>
-                                                    <option value="1" selected>2</option>
-                                                    <option value="2">3</option>
-                                                </select>
-                                                <span class="note-x">x</span>
-                                            </dt>
-                                            <dd>
-                                                <select data-class="selections-white curr-select" name="curr_type">
-                                                    <option value="0">45 min</option>
-                                                    <option value="1">50 min</option>
-                                                    <option value="2">55 min</option>
-                                                </select>
-                                            </dd>
-                                            <i class="fa fa-trash" aria-hidden="true"></i>
-                                        </dl>
-                                    </div>
-                                    <div class="add">
-                                        <a href="#">Add sets</a><a class="ico-box" href="#"><i class="ico question">?</i></a>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="col-2">
-                            <ul class="price-list">
-                                <li>
-                                    <div class="box">
-                                        <dl>
-                                            <dt>Price1:</dt>
-                                            <dd>
-                                                <input class="input-num" type="text" placeholder="3.000">
-                                                <span class="curr">GBP</span>
-                                            </dd>
-                                            <i class="fa fa-trash" aria-hidden="true"></i>
-                                        </dl>
-                                    </div>
 
-                                </li>
-                                <li>
-                                    <div class="add">
-                                        <a href="#">Add price</a><a class="ico-box" href="#"><i class="ico question">?</i></a>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </li>
-                </ul>
-            </article>
-            <article class="act private">
-                <h2 class="title">
-                    <input class="input-num huge" type="text" placeholder="Service title">
-                </h2>
-                <ul class="info-list">
-                    <li>
-                        <div class="col">
-                            <div class="row">
-                                <input class="input-num long" type="text" placeholder="Package name">
-                            </div>
-                        </div>
-                        <div class="col-2">
-                            <ul class="price-list">
-                                <li>
-                                    <div class="box">
-                                        <dl>
-                                            <dt>Price1:</dt>
-                                            <dd>
-                                                <input class="input-num" type="text" placeholder="3.000">
-                                                <span class="curr">GBP</span>
-                                            </dd>
-                                            <i class="fa fa-trash" aria-hidden="true"></i>
-                                        </dl>
-                                    </div>
+            <div act-section></div>
+            <div services-section></div>
 
-                                </li>
-                                <li>
-                                    <div class="add">
-                                        <a href="#">Add price</a><a class="ico-box" href="#"><i class="ico question">?</i></a>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </li>
-                </ul>
-            </article>
-            <div class="row btn-row">
-                <div class="button-gradient orange add-btn">
-                    <button type="button" class="btn register">Add extra Act</button>
-                </div>
-                <div class="button-gradient orange add-btn">
-                    <button type="button" class="btn register">Add a service</button>
-                </div>
+            <div class="button-gradient orange add-btn">
+                <button act-add type="button" class="btn register">Add extra Act</button>
+            </div>
+            <div class="button-gradient orange add-btn">
+                <button service-add type="button" class="btn register">Add a service</button>
             </div>
         </section>
     </div>
