--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/settings.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/settings.html.twig
@@ -334,25 +334,5 @@
     </div>
 </main>
 
-<div class="modal fade" id="cropperModal" role="dialog" aria-labelledby="modalLabel" tabindex="-1">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="modalLabel">Cropper</h4>
-            </div>
-            <div class="modal-body">
-                <div class="img-container text-center">
-                    <img style="display:none;" id="image" src="../assets/images/picture.jpg" alt="Picture" class="text-center">
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            </div>
-
-        </div>
-    </div>
-</div>
-
+{% include 'ActedLegalDocsBundle:Profile:modals.html.twig' %}
 {% include 'ActedLegalDocsBundle:Default:footer.html.twig' %}
