--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/userSectionEdit.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/userSectionEdit.html.twig
@@ -23,7 +23,7 @@
 <section class="profile-info container">
     {% if is_granted('EDIT', artist) %}
         <div class="avatar avatarEditable">
-            <img class="avatar" src="{{ artist.user.avatar }}" alt="Avatar">
+            <img class="avatarImg" src="{{ artist.user.avatar }}" alt="Avatar">
             <div id="editAvatar" class="set-avatar"><a href="#" data-toggle="modal" data-target="#changeImageModal"><i class="fa fa-camera" aria-hidden="true"></i></a></div>
         </div>
     {% else %}
