--- a/src/Acted/LegalDocsBundle/Resources/public/css/parts/prices.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/parts/prices.css
@@ -371,6 +371,25 @@ main.prices .note{
 .prices .fa.fa-trash:hover {
     cursor: pointer;
 }
+.prices .price-list dt > select {
+    width: 47px;
+    border: 1px solid #e5e5e5;
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    font-size: 15px;
+    padding: 5px;
+    color: #000;
+    background: #FFF;
+    height: 32px;
+    outline: 0;
+    position: relative;
+    display: inline-block;
+    /* vertical-align: middle; */
+    display: inline-block;
+    vertical-align: top;
+    margin-top: -5px;
+    line-height: 15px;
+}
 
 @media (max-width: 1199px) {
     .prices .act,
