--- a/src/Acted/LegalDocsBundle/Resources/views/Default/header.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/header.html.twig
@@ -7,6 +7,7 @@
           content="width=device-width, height=device-height, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 
 <link rel="stylesheet" href="{{ asset('css/styles.min.css') }}" />
+<link rel="stylesheet" href="{{ asset('css/style-retina.css') }}" />
 </head>
 <body>
 
