Removed email edit on settings page. 04/10/2016 3:21 PM

--- a/src/Acted/LegalDocsBundle/Resources/public/css/parts/settings-page.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/parts/settings-page.css
@@ -103,6 +103,9 @@
     border-color: #a0a0a0;
     color: #333;
 }
+.settings .email-title {
+    display: block !important;
+}
 .settings .btn-edit{
     background: url("../../assets/images/edit-darkgray.png") no-repeat;
     border: none;
