--- a/src/Acted/LegalDocsBundle/Resources/public/css/style.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/style.css
@@ -11,6 +11,7 @@
 @import "parts/agenda.css";
 @import "parts/chat-room.css";
 @import "parts/settings-page.css";
+@import "parts/how-it-works.css";
 
 @font-face {
     font-family: LatoBlack;
