Added new text for "How it works" page. Resolve problem with styles on prices page causes by retina styles. 05/10/2016 3:02 PM

--- a/src/Acted/LegalDocsBundle/Resources/public/css/parts/prices.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/parts/prices.css
@@ -192,7 +192,8 @@ main.prices{
 .prices .act .price-list li{
     display: inline-block;
     vertical-align: top;
-    width: 250px;
+    text-align: inherit !important;
+    width: 250px !important;
     padding-right: 5px;
 }
 /*.act .price-list li:last-child{*/
