--- a/src/Acted/LegalDocsBundle/Resources/views/Default/how-it-works.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/how-it-works.html.twig
@@ -27,8 +27,8 @@
                                     <div class="img-n img-1"></div>
                                 </div>
                                 <div class="col-lg-8 text-block">
-                                    <p>Browse any type of entertainers</p>
-                                    <p>Lorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit amet</p>
+                                    <p>One of the largest community of entertainers</p>
+                                    <p>You have access to one of the largest entertainment communities in the United Kingdom. This includes classic, extreme and specialized performances.</p>
                                 </div>
                             </div>
 
@@ -37,8 +37,8 @@
                                     <div class="img-n img-2"></div>
                                 </div>
                                 <div class="col-lg-8 text-block">
-                                    <p>Receive free quotes</p>
-                                    <p>Lorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit amet</p>
+                                    <p>Unlimited free quotes</p>
+                                    <p>Ask for as many quotes as you like and there are never any charges.</p>
                                 </div>
                             </div>
 
@@ -47,8 +47,8 @@
                                     <div class="img-n img-3"></div>
                                 </div>
                                 <div class="col-lg-8 text-block">
-                                    <p>Chat directly with the artists</p>
-                                    <p>Lorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit amet</p>
+                                    <p>Talk directly to the artists</p>
+                                    <p>No agents to deal with, you are in direct communication with the artist. this means you pay no additional fees for middlemen. Ask questions and find out exactly what you can expect.</p>
                                 </div>
                             </div>
 
@@ -57,8 +57,8 @@
                                     <div class="img-n img-4"></div>
                                 </div>
                                 <div class="col-lg-8 text-block">
-                                    <p>Immediate booking confirmation</p>
-                                    <p>Lorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit amet</p>
+                                    <p>Immediate booking</p>
+                                    <p>If you like what you see, you can secure your entertainment now. You can easily book services online and receive an immediate confirmation.</p>
                                 </div>
                             </div>
 
@@ -67,8 +67,8 @@
                                     <div class="img-n img-5"></div>
                                 </div>
                                 <div class="col-lg-8 text-block">
-                                    <p>Stress free your payment is guaranteed</p>
-                                    <p>Lorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit amet</p>
+                                    <p>Stress free payments</p>
+                                    <p>You won't have to worry about any payment problems. Payment is held in a secure escrow account until you confirm the services were rendered.</p>
                                 </div>
                             </div>
 
@@ -77,8 +77,8 @@
                                     <div class="img-n img-6"></div>
                                 </div>
                                 <div class="col-lg-8 text-block">
-                                    <p>Sit back & have a blast</p>
-                                    <p>Lorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit amet</p>
+                                    <p>Have a great time</p>
+                                    <p>Since we take care of all the hard work, you are free to sit back and enjoy the fun with no worries. It really is quite simple. Why not try it now and see?</p>
                                 </div>
                             </div>
 
@@ -91,7 +91,7 @@
                                 </div>
                                 <div class="col-lg-8 text-block">
                                     <p>Create your profile</p>
-                                    <p>Lorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit amet</p>
+                                    <p>Creating your lead generating profile only takes a few minutes. This will bring you leads & enquiries. And that’s not all.</p>
                                 </div>
                             </div>
 
@@ -100,8 +100,8 @@
                                     <div class="img-n img-8"></div>
                                 </div>
                                 <div class="col-lg-8 text-block">
-                                    <p>Send quotes in second</p>
-                                    <p>Lorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit amet</p>
+                                    <p>Two click quote replies</p>
+                                    <p>You only have to enter prices one time and it just takes two clicks for the entire process.</p>
                                 </div>
                             </div>
 
@@ -110,8 +110,8 @@
                                     <div class="img-n img-3"></div>
                                 </div>
                                 <div class="col-lg-8 text-block">
-                                    <p>Chat directly with the artists</p>
-                                    <p>Lorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit amet</p>
+                                    <p>Real time chat</p>
+                                    <p>Talk directly to potential clients. No agents or middlemen involved. This saves you and your clients both time and money.</p>
                                 </div>
                             </div>
 
@@ -121,7 +121,7 @@
                                 </div>
                                 <div class="col-lg-8 text-block">
                                     <p>Manage your bookings</p>
-                                    <p>Lorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit amet</p>
+                                    <p>Managing your business has never been easier. Thanks to our helpful dashboard, you can take care of and keep track of your enquiries, bookings and many other things.</p>
                                 </div>
                             </div>
 
@@ -130,8 +130,8 @@
                                     <div class="img-n img-10"></div>
                                 </div>
                                 <div class="col-lg-8 text-block">
-                                    <p>We do your paperwork</p>
-                                    <p>Lorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit amet</p>
+                                    <p>Automated Paperwork</p>
+                                    <p>Do you love taking care of time consuming and tedious paperwork? Most people don't. Why not let us do all this for you? Our platform is fully automated to greatly simplify bookings, invoices, contracts and quotations.</p>
                                 </div>
                             </div>
 
@@ -140,8 +140,8 @@
                                     <div class="img-n img-5"></div>
                                 </div>
                                 <div class="col-lg-8 text-block">
-                                    <p>Stress free your payment is guaranteed</p>
-                                    <p>Lorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit amet</p>
+                                    <p>Payment Security</p>
+                                    <p>You can rest easy knowing your payment is safe and secure. We provide a secure escrow account for your performance fees. Lack of payment or last minute cancellations are now a thing of the past.</p>
                                 </div>
                             </div>
 
@@ -150,8 +150,8 @@
                                     <div class="img-n img-6"></div>
                                 </div>
                                 <div class="col-lg-8 text-block">
-                                    <p>Make them smile!</p>
-                                    <p>Lorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit amet</p>
+                                    <p>Sunshine</p>
+                                    <p>You love to entertain and we are here to help you share this passion with your clients, spreading sunshine and happiness. Check us out today to see how simple it really is!</p>
                                 </div>
                             </div>
 
