--- a/src/Acted/LegalDocsBundle/Resources/public/css/parts/prices.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/parts/prices.css
@@ -403,6 +403,12 @@ main.prices .note{
     color: #000;
 }
 
+.prices .custom-checkbox label:before,
+.prices .custom-checkbox label:after {
+    height: 20px;
+    width: 20px;
+}
+
 @media (max-width: 1199px) {
     .prices .act,
     .prices .act .quantity{
