--- a/src/Acted/LegalDocsBundle/Resources/public/css/parts/footer.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/parts/footer.css
@@ -13,6 +13,7 @@ footer .copyright {
     color: #a6a6a6;
     font-size: 12px;
     padding-bottom: 20px;
+    margin: 0;
 }
 
 footer .social-icons {
