--- a/src/Acted/LegalDocsBundle/Resources/views/Admin/usersList.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Admin/usersList.html.twig
@@ -41,7 +41,7 @@
             <table class="table table-striped">
                 <thead>
                 <tr>
-                    <th>id</th>
+                    <th>User Id</th>
                     <th>Name</th>
                     <th>Slug</th>
                     <th>email</th>
