--- a/src/Acted/LegalDocsBundle/Resources/views/Admin/usersList.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Admin/usersList.html.twig
@@ -89,7 +89,7 @@
                                 </a>
                             {% endif %}
                             {% if user.artist is defined or user.role_name == 'Client' %}
-                                {% if user.active == false and user.fake == false and user.email %}
+                                {% if user.active == false and user.email %}
                                     <button type="button" class="btn btn-success tokenResendUser" >Resend token</button>
                                 {% endif %}
                             {% endif %}
