--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/mediaSectionEdit.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/mediaSectionEdit.html.twig
@@ -53,7 +53,7 @@
 
     <div class="row">
 
-        <section class="media-content wrapper" id="section-photo">
+        <section class="media-content wrapper active" id="section-photo">
             {% if is_granted('EDIT', artist) or is_granted('ROLE_ADMIN') %}
                 <button id="profileAddNewMedia" type="button" class="btn btn-success" data-toggle="modal" data-target="#addImageModal"><i class="fa fa-plus"></i> Add new image</button>
             {% endif %}
