--- a/src/Acted/LegalDocsBundle/Resources/public/css/style.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/style.css
@@ -1345,13 +1345,13 @@ section.used-by {
     color: #b1b1b1;
 }
 
-.pagination a.prev-page span {
-    -webkit-transform: rotate(-180deg);
-    -moz-transform: rotate(-180deg);
-    -ms-transform: rotate(-180deg);
-    -o-transform: rotate(-180deg);
-    transform: rotate(-180deg);
-}
+/*.pagination a.prev-page span {*/
+    /*-webkit-transform: rotate(-180deg);*/
+    /*-moz-transform: rotate(-180deg);*/
+    /*-ms-transform: rotate(-180deg);*/
+    /*-o-transform: rotate(-180deg);*/
+    /*transform: rotate(-180deg);*/
+/*}*/
 
 .pagination a.not-active {
     cursor: not-allowed;
