Update "How it works" page controller. 18/10/2016 6:26 PM

--- a/src/Acted/LegalDocsBundle/Resources/public/css/style.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/style.css
@@ -13,6 +13,7 @@
 @import "parts/artist-selection.css";
 @import "parts/settings-page.css";
 @import "parts/how-it-works.css";
+@import "custom.css";
 
 @font-face {
     font-family: LatoBlack;
