--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/settings.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/settings.html.twig
@@ -177,7 +177,7 @@
                             </div>
                             <div class="box">
                                 <div class="custom-checkbox big">
-                                    <input id="ready_1" type="radio" name="work_abroad" {% if artist.work_abroad == true %} checked="checked"{% endif %}\>
+                                    <input id="ready_1" type="radio" name="work_abroad" {% if artist.work_abroad == true %} checked="checked"{% endif %}>
                                     <label for="ready_1">Yes</label>
                                 </div>
                                 <div class="custom-checkbox big">
